--- a/Projects/veni-vici!/src/App.css
+++ b/Projects/veni-vici!/src/App.css
@@ -5,38 +5,87 @@
   text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.whole-page {
+  padding: 30px;
+  text-align: center;
+  background: rgba(49, 49, 49, 0.87);
+  color: #fff;
+  border-radius: 10px;
+  width: 650px;
+  box-shadow: 0 4px 8px #f5f5f533, 0 6px 20px #fdfdfd30;
+  height: 750px;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.listing-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.attribute-buttons {
+  margin: 0 5px;
+  background-color: #8d6612f0;
+  box-shadow: 0 3px #7e4b0d;
 }
 
-.card {
-  padding: 2em;
+.cat-img-container {
+  display: inline-block !important;
+  height: 350px;
+  width: 350px;
+  background-color: #fff;
+  border-radius: 10px;
+  padding: 10px;
+  margin-bottom: 4px;
+  transition: 0.1s;
 }
 
-.read-the-docs {
-  color: #888;
+.cat-pic {
+  height: 100%;
+  width: 100% !important;
+  height: 100% !important;
+  display: inline-block;
+  position: relative;
+  object-fit: cover;
+}
+
+.cat-description {
+  background-color: rgba(255, 255, 255, 0.9);
+  padding: 5px;
+  border-radius: 5px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+}
+
+.history-sidebar {
+  position: absolute;
+  height: 100%;
+  width: 15%;
+  height: 75%;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  background-color: #d2d2d2b4;
+  color: #000;
+  padding: 15px 15px 15px 10px;
+  margin-top: 5%;
+  display: flex;
+  overflow-y: scroll;
+  flex-direction: column;
+  align-items: center;
+}
+
+.sideNav {
+  height: 100%;
+  width: 20%;
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #d2d2d2;
+  color: #000;
+  padding: 15px 15px 15px 10px;
+  display: flex;
+  overflow-y: scroll;
+  flex-direction: column;
+  align-items: center;
 }
