--- a/Projects/veni-vici!/src/App.css
+++ b/Projects/veni-vici!/src/App.css
@@ -8,12 +8,12 @@
 .whole-page {
   padding: 30px;
   text-align: center;
-  background: rgba(49, 49, 49, 0.87);
-  color: #fff;
+  background: rgba(136, 136, 136, 0.693);
+  color: #111010;
   border-radius: 10px;
   width: 650px;
   box-shadow: 0 4px 8px #f5f5f533, 0 6px 20px #fdfdfd30;
-  height: 750px;
+  height: 980px;
 }
 
 .listing-container {
@@ -23,10 +23,27 @@
   align-items: center;
 }
 
-.attribute-buttons {
-  margin: 0 5px;
-  background-color: #8d6612f0;
-  box-shadow: 0 3px #7e4b0d;
+.App-name,
+.start-discover,
+.cat-name {
+  text-shadow: 2px 2px 4px rgb(96, 96, 96);
+}
+.cat-name,
+.start-discover,
+.App-name {
+  /* color: rgb(123, 174, 134); */
+  /* color: #77ac65; */
+  /* color: #ddb35f; */
+  color: #ebebeb;
+}
+
+.cat-name {
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-size: 3em;
+}
+
+.start-detail {
+  color: rgba(49, 49, 43, 0.855);
 }
 
 .cat-img-container {
@@ -47,45 +64,4 @@
   display: inline-block;
   position: relative;
   object-fit: cover;
-}
-
-.cat-description {
-  background-color: rgba(255, 255, 255, 0.9);
-  padding: 5px;
-  border-radius: 5px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
-}
-
-.history-sidebar {
-  position: absolute;
-  height: 100%;
-  width: 15%;
-  height: 75%;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  background-color: #d2d2d2b4;
-  color: #000;
-  padding: 15px 15px 15px 10px;
-  margin-top: 5%;
-  display: flex;
-  overflow-y: scroll;
-  flex-direction: column;
-  align-items: center;
-}
-
-.sideNav {
-  height: 100%;
-  width: 20%;
-  position: fixed;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  background-color: #d2d2d2;
-  color: #000;
-  padding: 15px 15px 15px 10px;
-  display: flex;
-  overflow-y: scroll;
-  flex-direction: column;
-  align-items: center;
 }
