--- a/Projects/Crewmate/src/App.css
+++ b/Projects/Crewmate/src/App.css
@@ -5,22 +5,9 @@
   text-align: center;
 }
 
-.sidenav {
-  height: 100%;
-  width: 12%;
-  position: fixed;
-  font-size: larger;
-  font-weight: bolder;
+.home-page,
+.create-crewmate-page,
+.gallery-page {
+  padding-left: 100px;
   top: 0;
-  left: 0;
-  bottom: 0;
-  background-color: #5b5a5a;
-  padding: 15px 10px;
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
-}
-
-.whole-page {
-  margin-left: 100px;
 }
