Completed all css.

--- a/Projects/Crewmate/src/App.css
+++ b/Projects/Crewmate/src/App.css
@@ -11,3 +11,15 @@
   padding-left: 100px;
   top: 0;
 }
+
+.title {
+  @apply text-4xl dark:text-white font-extrabold font-mono;
+}
+
+.sub-title {
+  @apply text-2xl dark:text-white font-extrabold font-mono;
+}
+
+.crewmate-btn {
+  @apply mt-2 py-2 px-3 inline-flex justify-center items-center gap-x-2 text-sm font-semibold rounded-lg border border-transparent bg-blue-600 text-white hover:bg-blue-700 disabled:opacity-50 disabled:pointer-events-none;
+}
