--- a/Projects/Crewmate/src/components/CreateMate.css
+++ b/Projects/Crewmate/src/components/CreateMate.css
@@ -8,39 +8,33 @@
 }
 
 .mini-container {
-  display: flex;
-  justify-content: space-evenly;
-  flex-direction: column;
-  margin: 15px;
-  padding: 25px;
-  border-radius: 15px;
-  box-shadow: 0 4px 8px #0003, 0 6px 20px #00000030;
-  background-color: #a2a1a180;
+  @apply container mx-auto px-4;
 }
 
-.character-type {
-  list-style: none;
-  margin: auto;
-  text-align: left;
-  padding: 5px;
+.label-title {
+  @apply flex block text-sm font-bold mb-2 dark:text-gray-400 uppercase;
 }
 
-.type-pink {
-  color: hsl(302, 76%, 43%); /* Pink text color */
+.weapon-label-select {
+  @apply sm:p-5 p-4 pe-9 block bg-gray-900 border-gray-200 rounded-lg text-sm font-serif font-semibold focus:border-blue-500 focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none dark:bg-slate-900 dark:border-gray-700 dark:text-gray-400 dark:focus:ring-gray-600;
 }
 
-.type-blue {
-  color: hsl(218, 80%, 33%);
+.name-label-input {
+  @apply py-3 px-4 block bg-gray-900 border-gray-200 rounded-lg text-sm font-bold focus:border-blue-500 focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none dark:bg-slate-900 dark:border-gray-700 dark:text-gray-400 dark:focus:ring-gray-600;
 }
 
-.type-yellow {
-  color: hwb(35 5% 6%); /* Red shadow */
+.type-Psychic-color {
+  @apply ms-3 block w-full text-sm font-mono text-fuchsia-500;
 }
-
-.type-purple {
-  color: #562fc1;
+.type-Mecha-color {
+  @apply ms-3 block w-full text-sm font-mono text-blue-500;
 }
-
-.type-light-yellow {
-  color: hsl(51, 79%, 58%); /* Red shadow */
+.type-Biologic-color {
+  @apply flex flex-col ms-3 block w-full text-sm font-mono text-orange-300;
+}
+.type-Quantum-color {
+  @apply flex flex-col ms-3 block w-full text-sm font-mono text-indigo-700;
+}
+.type-Imaginary-color {
+  @apply flex flex-col ms-3 block w-full text-sm font-mono text-yellow-100;
 }
