--- a/Projects/Crewmate/src/components/CrewmateGallery.css
+++ b/Projects/Crewmate/src/components/CrewmateGallery.css
@@ -2,27 +2,34 @@
 @tailwind components;
 @tailwind utilities;
 
-.crew-card-pink {
-  @apply flex flex-col bg-white border shadow-sm rounded-xl dark:bg-slate-900 dark:border-fuchsia-500 dark:shadow-slate-700/70;
-}
-.crew-card-blue {
-  @apply flex flex-col bg-white border shadow-sm rounded-xl dark:bg-slate-900 border-blue-500 dark:shadow-slate-700/70;
-}
-.crew-card-yellow {
-  @apply flex flex-col bg-white border shadow-sm rounded-xl dark:bg-slate-900 border-yellow-500 dark:shadow-slate-700/70;
-}
-.crew-card-purple {
-  @apply flex flex-col bg-white border shadow-sm rounded-xl dark:bg-slate-900 dark:border-indigo-700 dark:shadow-slate-700/70;
-}
-.crew-card-light-yellow {
-  @apply flex flex-col bg-white border shadow-sm rounded-xl dark:bg-slate-900 dark:border-yellow-100 dark:shadow-slate-700/70;
-}
-.crew-card-btn {
-  @apply mt-2 py-2 px-3 inline-flex justify-center items-center gap-x-2 text-sm font-semibold rounded-lg border border-transparent bg-blue-600 text-white hover:bg-blue-700 disabled:opacity-50 disabled:pointer-events-none;
-}
-.crew-card-h3 {
-  @apply text-lg font-semibold text-gray-800 dark:text-white;
-}
 .crewmate-container {
   @apply grid grid-cols-3 gap-4;
+}
+
+.crew-card-pink {
+  @apply flex flex-col bg-fuchsia-300 border shadow-sm rounded-xl border-fuchsia-700 shadow-fuchsia-700/70;
+}
+.crew-card-blue {
+  @apply flex flex-col bg-blue-300 border shadow-sm rounded-xl border-blue-700 shadow-blue-700/70;
+}
+.crew-card-yellow {
+  @apply flex flex-col bg-orange-300 border shadow-sm rounded-xl border-orange-700 shadow-orange-700/70;
+}
+.crew-card-purple {
+  @apply flex flex-col bg-indigo-400 border shadow-sm rounded-xl border-indigo-700 shadow-indigo-700/70;
+}
+.crew-card-light-yellow {
+  @apply flex flex-col bg-yellow-100 border shadow-sm rounded-xl border-yellow-700 shadow-yellow-700/70;
+}
+
+.crew-card-name {
+  @apply text-4xl font-bold text-gray-800 shadow-sm;
+}
+
+.crew-card-type {
+  @apply text-lg font-mono text-gray-700 shadow-sm font-semibold;
+}
+
+.crew-card-weapon {
+  @apply text-lg font-serif text-gray-700 shadow-sm font-semibold;
 }
